--- a/css/open_research.css
+++ b/css/open_research.css
@@ -102,3 +102,12 @@
 .post .post-footer .comments-list .comment > .comments-list {
   margin-left: 50px;
 }
+#comments{
+
+  overflow-y: scroll;
+  height: 750px;
+}
+html, body{
+   height: 100%;
+   min-height: 100%;
+}
